chore(payment-flow): remove IDRX base for example usage
